# Dodecahedron-OpenGL

./: CMakeLists.txt  README.md
include/: Utils.h
src/: Elements.cpp  Shaders.cpp  Utils.cpp  main.cpp
